[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/main/match_setup/MapScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/monogram_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/gray_panel_screws_stylebox.tres" type="StyleBox" id=6]

[node name="MapScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -135.0
margin_right = 335.0
margin_bottom = 157.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 50.0
margin_top = 30.0
margin_right = 620.0
margin_bottom = 262.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 570.0
margin_bottom = 51.0
text = "Map"
align = 1

[node name="MapSwitcher" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 76.0
margin_right = 570.0
margin_bottom = 142.0

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_top = 167.0
margin_right = 570.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 4 )
text = "Description of the map."
align = 1
autowrap = true

[node name="NextButton" type="Button" parent="Panel/VBoxContainer"]
margin_left = 210.0
margin_top = 167.0
margin_right = 360.0
margin_bottom = 232.534
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
text = "Next"
script = ExtResource( 5 )
[connection signal="item_selected" from="Panel/VBoxContainer/MapSwitcher" to="." method="_on_MapSwitcher_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
